# ezrac

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  OPTIMIZATION_SAFETY.md  README.md  REMAINING_WORK.md  SPEC_COVERAGE.md  optimizations.md  spec.md
.github/workflows/: portable-library.yml
docs/: 6502-opcode-coverage.md  agon-apps.md  agon-light-assembly-audit.md  cpm-sdk-tracker.md  dcpu-assembly.md  editor-syntax.md  ez80-opcode-coverage.md  ez80-test-harness-targets.md  gameboy-assembly.md  i8086-assembly.md  ir-design.md  language.md  m6800-assembly.md  m68k-assembly.md  mos6502-assembly.md  msdos-sdk.md  platforms.md  real-core-test-results.md  real-core-tests.md  tms9900-assembly.md  usage.md
docs/targets/: commodore64.md
editors/codeberg/: README.md
editors/codemirror/: ezra.js
editors/common/: ezra-keywords.txt
editors/github/: ezra.tmLanguage.json  languages.yml
editors/helix/: languages.toml
editors/helix/queries/: highlights.scm
editors/micro/: ezra.yaml
editors/nano/: ezra.nanorc
editors/neovim/: README.md
editors/notepad++/: ezra.xml
editors/tree-sitter-ezra/: grammar.js  package.json
editors/tree-sitter-ezra/src/: grammar.json  node-types.json  parser.c
editors/vim/ftdetect/: ezra.vim
editors/vim/ftplugin/: ezra.vim
editors/vim/syntax/: ezra.vim
editors/vscode/: extension.js  language-configuration.json  package-lock.json  package.json
editors/vscode/syntaxes/: ezra.tmLanguage.json
editors/zed/: Cargo.toml  extension.toml  extension.wasm
editors/zed/grammars/: ezra.wasm
editors/zed/src/: lib.rs
examples/agon-mos/: README.md
examples/agon-mos/coffee-order/: Ezra.toml  README.md
examples/agon-mos/console/: Ezra.toml  README.md
examples/agon-mos/hello/: Ezra.toml  README.md
examples/agon-mos/hex-diagnostics/: Ezra.toml  README.md
examples/agon-mos/mandelbrot/: Ezra.toml  README.md
examples/agon-mos/sdk-showcase/: Ezra.toml  README.md
examples/agon-mos/space-invaders/: Ezra.toml  README.md
examples/cpm-z80/: Ezra.toml  README.md  console-output.asm  exit.asm  file-control.ezra  file-read.asm  file-read.ezra  hello-char.asm  hello-line.asm  hello-source.ezra  line-input.asm  line-input.ezra
examples/msdos-i8086/: Ezra.toml  README.md  arguments.ezra  file-io.ezra  hello.ezra
examples/ti99-4a/: hello.ezra
examples/tiny-lisp/: Ezra.toml  README.md  main.ezra
src/: api.rs  api_no_std.rs  asm.rs  asm_meta.rs  ast.rs  banking.rs  cart.rs  compat.rs  compile.rs  declaration.rs  diagnostic.rs  ezra.pest  hir.rs  layout.rs  lib.rs  lsp_server.rs  main.rs  package.rs  parser.rs  project.rs  target.rs  tbir.rs  vm.rs  workspace.rs
src/asm/: assembly.pest  avr.rs  avr_emitter.rs  chip8.rs  comments.rs  dcpu.rs  dcpu_emitter.rs  frontend.rs  grammar.rs  i8086.rs  i8086_emitter.rs  lr35902.rs  lr35902_emitter.rs  m6800.rs  m6800_emitter.rs  m68k.rs  m68k_emitter.rs  mos6502.rs  mos6502_emitter.rs  preprocess.rs  tms9900.rs  tms9900_emitter.rs
src/cart/: tests.rs
src/compile/: tests.rs
src/diagnostic/: tests.rs
src/hir/: dump.rs  tests.rs
src/layout/: tests.rs
src/lsp_server/: tests.rs
src/parser/: tests.rs
src/project/: tests.rs
src/tbir/: diagnostics.rs  dump.rs  ez80.rs  model.rs  optimize.rs  tests.rs
src/tests/: assembly_behavior.rs  build_behavior.rs  cli_options.rs  emulator_behavior.rs  layout_behavior.rs  mod.rs  project_behavior.rs  support.rs  target_output_behavior.rs
target-zed-bank-syntax/: .rustc_info.json
tests/: libretro_examples.rs  no_std_workspace.rs  zxspectrum_examples.rs
tools/: run-fab-agon.ps1  test-real-cores.ps1
(+275 files in other folders)
