[package]
name = "ezrac"
version = "0.1.22"
edition = "2024"
description = "Compiler and tooling prototype for the EZRA language"
license = "MIT"
repository = "https://github.com/isaiahpettingill/ezrac"

[lib]
name = "ezra"

[dependencies]
ez80 = "0.5.0"
lsp = { version = "0.1.1", optional = true }
m68000 = { version = "0.2.3", optional = true }
pest = "2.8.7"
pest_derive = "2.8.7"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.150", optional = true }
toml = "1.1.2"

[features]
default = ["intel", "z80", "lr35902"]
intel = []
z80 = []
lr35902 = []
avr = []
chip8 = []
m6800 = []
m68k = ["dep:m68000"]
mos6502 = []
lsp = ["dep:lsp", "dep:serde", "dep:serde_json"]

[dev-dependencies]
mos6502 = "0.10.1"
