[package]
name = "ezrac"
version = "0.1.29"
edition = "2024"
description = "Compiler and tooling prototype for the EZRA language"
license = "BSD-3-Clause"
repository = "https://github.com/isaiahpettingill/ezrac"

[lib]
name = "ezra"

[[bin]]
name = "ezrac"
path = "src/main.rs"
required-features = ["std", "test-runner"]

[dependencies]
dcpu = { version = "0.5.0", default-features = false, features = ["debugger-cli"], optional = true }
ez80 = { version = "0.5.0", optional = true }
mos6502 = { version = "0.10.1", optional = true }
lsp = { version = "0.1.1", optional = true }
m6800 = { version = "0.1.0", optional = true }
m68000 = { version = "0.2.3", optional = true }
hashbrown = { version = "0.15.5", default-features = false, features = ["default-hasher", "inline-more"] }
pest = { version = "2.8.7", default-features = false }
pest_derive = { version = "2.8.7", default-features = false }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.150", optional = true }
toml = { version = "1.1.2", optional = true }

[features]
default = ["std", "test-runner", "intel", "z80", "lr35902"]
std = ["dep:toml", "pest/std", "pest_derive/std"]
no-std = []
test-runner = ["std", "dep:ez80"]
intel = []
z80 = []
lr35902 = []
avr = []
m6800 = ["dep:m6800"]
m68k = ["dep:m68000"]
mos6502 = []
mos6502-emulator = ["mos6502", "std", "test-runner", "dep:mos6502"]
tms9900 = []
dcpu = ["dep:dcpu"]
lsp = ["dep:lsp", "dep:serde", "dep:serde_json"]

[dev-dependencies]
play96 = "0.3.2"
libre99-core = { git = "https://github.com/joelodom/libre99.git", rev = "6c86f10bae65f4cc3bdc13289e14bb20af03ab61" }
libre99-asm = { git = "https://github.com/joelodom/libre99.git", rev = "6c86f10bae65f4cc3bdc13289e14bb20af03ab61" }
